test/libyul/yulSyntaxTests/surplus_input.yul
{}
{}
// ----
// ParserError 2314: (3-4): Expected end of source but got '{'
